; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-imxdi.c_dryice_rtc_set_alarm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-imxdi.c_dryice_rtc_set_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rtc_wkalrm = type { i64, i32 }
%struct.imxdi_dev = type { i32 }

@DCAMR = common dso_local global i32 0, align 4
@DIER_CAIE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.rtc_wkalrm*)* @dryice_rtc_set_alarm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dryice_rtc_set_alarm(%struct.device* %0, %struct.rtc_wkalrm* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.rtc_wkalrm*, align 8
  %6 = alloca %struct.imxdi_dev*, align 8
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.rtc_wkalrm* %1, %struct.rtc_wkalrm** %5, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.imxdi_dev* @dev_get_drvdata(%struct.device* %8)
  store %struct.imxdi_dev* %9, %struct.imxdi_dev** %6, align 8
  %10 = load %struct.imxdi_dev*, %struct.imxdi_dev** %6, align 8
  %11 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %12 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %11, i32 0, i32 1
  %13 = call i32 @rtc_tm_to_time64(i32* %12)
  %14 = load i32, i32* @DCAMR, align 4
  %15 = call i32 @di_write_wait(%struct.imxdi_dev* %10, i32 %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %34

20:                                               ; preds = %2
  %21 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %22 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %20
  %26 = load %struct.imxdi_dev*, %struct.imxdi_dev** %6, align 8
  %27 = load i32, i32* @DIER_CAIE, align 4
  %28 = call i32 @di_int_enable(%struct.imxdi_dev* %26, i32 %27)
  br label %33

29:                                               ; preds = %20
  %30 = load %struct.imxdi_dev*, %struct.imxdi_dev** %6, align 8
  %31 = load i32, i32* @DIER_CAIE, align 4
  %32 = call i32 @di_int_disable(%struct.imxdi_dev* %30, i32 %31)
  br label %33

33:                                               ; preds = %29, %25
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %18
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.imxdi_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @di_write_wait(%struct.imxdi_dev*, i32, i32) #1

declare dso_local i32 @rtc_tm_to_time64(i32*) #1

declare dso_local i32 @di_int_enable(%struct.imxdi_dev*, i32) #1

declare dso_local i32 @di_int_disable(%struct.imxdi_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
